Lexical-Sintax-Analizer/compilador.java
/* Generated By:JavaCC: Do not edit this line. compilador.java */
import java.io.*;
import java.util.*;
class compilador implements compiladorConstants {
    //Beware those who seek the seecret wich lie within for once you start debugging youl never be the same...
    private static String printConsole;
    private static int tipo = 0;       //La variable indica el tipo de las siguientes variables declaradas en el renglón
    private static Vector<Objeto> varTemporal = new Vector<Objeto>();

    //Todas las funciones se guardán aqui en dferentes espacios (contextos) que contendran los contextos locales
    private static Vector<TablaVariables> listaContextos = new Vector<TablaVariables>();
    private static int contextoNum = -1; //Esta variable apunta a la tabla de contexto actual y se usa para generar el cuadruplo que maneja el apuntador al contexto actual
    private static Vector<Function> listaFunciones = new Vector<Function>();

    private static ArrayList<String> listaErrores = new ArrayList<String>();    //Todos los errores se imprimen después de compilación
    private static ArrayList<String> printConsoleArr = new ArrayList<String>(); //Esta lista se imprime en consola con el comando print al finalizar la compilación

    //En este arreglo se guarda cada cuadruplo a medida que se compila el programa, al final se ejecutaran todos los cuadruplos en orden
    public static ArrayList<Cuadruplo> cuadruplosArr = new ArrayList<Cuadruplo>();
    public static CuboSemantico cuboSemantico = new CuboSemantico();

    public static Stack<Integer> OperandStack = new Stack<Integer>();
    public static Stack<Integer> OperatorStack = new Stack<Integer>();
    public static Stack<Integer> TypeStack = new Stack<Integer>();
    public static Stack<Integer> JumpStack = new Stack<Integer>();
    public static Stack<Integer> ReturnStack = new Stack<Integer>();
    public static Stack<Integer> PendingGOTOStack = new Stack<Integer>();

    private static Memoria memGlobal = new Memoria(10000,40000);
    private static Memoria memLocal = new Memoria(40000,70000);
    private static Memoria memTemporal = new Memoria(70000,100000);
    private static Memoria memConstante = new Memoria(100000,130000);

    public static MaquinaVirtual vm;

    private static void asign(Token identificador, Objeto var){
        boolean error = true;

        int i = 0;
        //Realiza una busqueda del contexto global al local
        for(i = 0; i < listaContextos.size() && error; i++){
            if(listaContextos.get(i).obtenerVar(identificador.image)!=null){
                listaContextos.get(i).actualizarVar(identificador.image, var);
                error = false;
            }
        }

        if(error)listaErrores.add("Error found At line "+identificador.beginLine+", column "+identificador.beginColumn+"\u005cn   variable '"+identificador.image+"' has not been declared.");
    }

    private static Objeto search(String id){
        int i = 0;
        //Realiza una busqueda en el contexto global y local
        if(listaContextos.get(listaContextos.size()-1).obtenerVar(id)!=null){
            return listaContextos.get(listaContextos.size()-1).obtenerVar(id);
        }else if(listaContextos.get(0).obtenerVar(id)!=null){
            return listaContextos.get(0).obtenerVar(id);
        }

        listaErrores.add("Error found At line "+token.beginLine+", column "+token.beginColumn+"\u005cn   variable '"+id+"' was not found.");
        token.image = "0";

        return new Objeto();
    }

    public static void decl(Token identificador, Objeto var){
        var.setType(tipo);
        boolean noVar = false;

        if(var.getStatus().equals("ok")){
            int i = 0;

            //Busca en el contexto global y local si la variable existe
            if(listaContextos.get(listaContextos.size()-1).obtenerVar(identificador.image)!=null || listaContextos.get(0).obtenerVar(identificador.image)!=null){
                noVar=true;
            }

            if(!noVar){
                listaContextos.lastElement().insertarVar(identificador.image, var);
            }
        }

        if(noVar){
            listaErrores.add("Error found At line "+identificador.beginLine+", column "+identificador.beginColumn+"\u005cn   variable '"+identificador.image+"' was already declared at this scope.");
        }
    }

    public static void main( String[] args )throws ParseException, Exception
        {
                try
                {
                compilador analizador = new compilador( System.in ) ;
                        analizador.Programa();
                        for(int i = 0; i < listaErrores.size(); i++){
                            System.out.println(listaErrores.get(i));
                        }
                        if(listaErrores.size()<1){
                        //listaContextos.get(0).verTabla();
                vm = new MaquinaVirtual(cuadruplosArr, memGlobal, memLocal,memTemporal,memConstante, listaFunciones);
                vm.run();
                System.out.println("\u005cn\u005ctBuild Sucessful");
                for(int i = 0; i < cuadruplosArr.size(); i++){
                    System.out.println(i + " " + cuadruplosArr.get(i));
                }
                        }else{
                        System.out.println("\u005cn"+listaErrores.size()+" errors.");
                        }
                }
                catch(ParseException e)
                {
                        System.out.println(e.getMessage());
                        System.out.println("\u005cn\u005ctErrors found.");
                }
        }

  static final public void Programa() throws ParseException {
Cuadruplo cuadActual = new Cuadruplo();
contextoNum++;
cuadActual.CuadruploSetIzqRes(cuadruplosArr.size(),19,-1,contextoNum);
cuadruplosArr.add(cuadActual);
listaContextos.addElement(new TablaVariables());
    jj_consume_token(PROGRAM);
    jj_consume_token(ID);
    jj_consume_token(SEMICOLON);
    label_1:
    while (true) {
      if (jj_2_1(3)) {
        ;
      } else {
        break label_1;
      }
      VARS();
    }
            cuadActual = new Cuadruplo();
            cuadActual.CuadruploSetIzqRes(token.beginLine,17,-1,-1);
        PendingGOTOStack.push(cuadruplosArr.size());
        cuadruplosArr.add(cuadActual);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case FLOAT:
      case CHAR:
      case VECTOR:
      case VOID:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_2;
      }
      MODULO();
    }
    BLOQUE();
    jj_consume_token(0);
        cuadActual = new Cuadruplo();
        cuadActual.CuadruploSetRes(token.beginLine,22,1);
    cuadruplosArr.add(cuadActual);
  }

  static final public void BLOQUE() throws ParseException {
    if (jj_2_2(2)) {
      jj_consume_token(LKEY);
      BLOQUE_AUX();
      jj_consume_token(RKEY);
    } else {
      ;
    }
  }

  static final public void BLOQUE_AUX() throws ParseException {
    ESTATUTO();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IF:
    case WHILE:
    case PRINT:
    case INT:
    case FLOAT:
    case CHAR:
    case RETURN:
    case ID:
      BLOQUE_AUX();
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
  }

  static final public void ESTATUTO() throws ParseException {
    if (jj_2_3(3)) {
      VARS();
    } else if (jj_2_4(3)) {
      ASIGNACION();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
        CONDICION();
        break;
      case PRINT:
        ESCRITURA();
        break;
      case WHILE:
        CICLO();
        break;
      case ID:
        LLAMADA_FUNC();
        break;
      case RETURN:
        RETORNO();
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void ASIGNACION() throws ParseException {
Objeto var = new Objeto();
Token identificador;
int opDer,opIzq,opOPerator, tyDer, tyIzq, tyRes ,opRes=0;
Cuadruplo cuadActual = new Cuadruplo();
    identificador = jj_consume_token(ID);
        var = search(token.image);
        OperandStack.push(var.getDireccion());
        TypeStack.push(var.getType()+34);
    jj_consume_token(EQUAL);
        OperatorStack.push(token.kind);
    MEGAEXPRESION();
         if(!OperatorStack.isEmpty()){
             if (OperatorStack.peek() == 29){
                 opDer = OperandStack.pop();
                 tyDer = TypeStack.pop();
                 opIzq = OperandStack.pop();
                 tyIzq = TypeStack.pop();
                 opOPerator = OperatorStack.pop();
                 if(tyIzq == tyDer){
                      cuadActual.CuadruploSetIzqRes(token.beginLine,opOPerator-17,opDer,opIzq);
                      cuadruplosArr.add(cuadActual);
                 }
             }
         }
    jj_consume_token(SEMICOLON);
  }

  static final public void MEGAEXPRESION() throws ParseException {
int opDer,opIzq,opOPerator, tyDer, tyIzq, tyRes ,opRes=0;
Cuadruplo cuadActual = new Cuadruplo();
    EXPRESION();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OR:
    case AND:
      if (jj_2_5(2)) {
        jj_consume_token(AND);
            OperatorStack.push(token.kind);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case OR:
          jj_consume_token(OR);
            OperatorStack.push(token.kind);
          break;
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      EXPRESION();
       if(!(OperatorStack.isEmpty()) && !(OperandStack.size() < 2)){
           if (OperatorStack.peek() == 27 || OperatorStack.peek() == 28)
           {
               opDer = OperandStack.pop();
               tyDer = TypeStack.pop();
               opIzq = OperandStack.pop();
               tyIzq = TypeStack.pop();
               opOPerator = OperatorStack.pop();
               tyRes = cuboSemantico.getValidacion(opOPerator,tyIzq,tyDer);
               if(tyRes != -1){
                   if(tyRes == 0){
                       opRes = memTemporal.asignacionMemoriaEntera(0);
                       OperandStack.push(opRes);
                    }
                    if(tyRes == 1){
                       opRes = memTemporal.asignacionMemoriaFlotante(0);
                       OperandStack.push(opRes);
                    }
                    cuadActual.CuadruploSetComplete(token.beginLine,opOPerator-17,opIzq,opDer,opRes);
                    cuadruplosArr.add(cuadActual);
                    TypeStack.add(tyRes+34);
               }
           }
       }
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
  }

  static final public void EXPRESION() throws ParseException {
int opDer,opIzq,opOPerator, tyDer, tyIzq, tyRes ,opRes=0;
Cuadruplo cuadActual = new Cuadruplo();
    EXP();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EQ:
    case LTE:
    case LT:
    case GTE:
    case GT:
    case DFT:
      EXPRESION_AUX();
      EXP();
         if(!(OperatorStack.isEmpty()) && !(OperandStack.size() < 2)){
             if (OperatorStack.peek() >= 21 && OperatorStack.peek() <= 26)
             {
                 opDer = OperandStack.pop();
                 tyDer = TypeStack.pop();
                 opIzq = OperandStack.pop();
                 tyIzq = TypeStack.pop();
                 opOPerator = OperatorStack.pop();
                 tyRes = cuboSemantico.getValidacion(opOPerator,tyIzq,tyDer);
                 if(tyRes != -1){
                     if(tyRes == 0){
                         opRes = memTemporal.asignacionMemoriaEntera(0);
                         OperandStack.push(opRes);
                      }
                      if(tyRes == 1){
                         opRes = memTemporal.asignacionMemoriaFlotante(0);
                         OperandStack.push(opRes);
                      }
                      cuadActual.CuadruploSetComplete(token.beginLine,opOPerator-17,opIzq,opDer,opRes);
                      cuadruplosArr.add(cuadActual);
                      TypeStack.add(tyRes+34);
                 }
             }
         }
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
  }

  static final public void EXPRESION_AUX() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LT:
      jj_consume_token(LT);
             OperatorStack.push(token.kind);
      break;
    case GT:
      jj_consume_token(GT);
               OperatorStack.push(token.kind);
      break;
    case DFT:
      jj_consume_token(DFT);
                OperatorStack.push(token.kind);
      break;
    case EQ:
      jj_consume_token(EQ);
               OperatorStack.push(token.kind);
      break;
    case GTE:
      jj_consume_token(GTE);
                OperatorStack.push(token.kind);
      break;
    case LTE:
      jj_consume_token(LTE);
                OperatorStack.push(token.kind);
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void EXP() throws ParseException {
int opDer,opIzq,opOPerator, tyDer, tyIzq, tyRes ,opRes=0;
Cuadruplo cuadActual = new Cuadruplo();
    TERMINO();
    if (jj_2_6(3)) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ADDITION:
        jj_consume_token(ADDITION);
        OperatorStack.push(token.kind);
        break;
      case SUBSTRACTION:
        jj_consume_token(SUBSTRACTION);
        OperatorStack.push(token.kind);
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      EXP();
    } else {
      ;
    }
     if(!(OperatorStack.isEmpty()) && !(OperandStack.size() < 2)){
         if (OperatorStack.peek() == 17 || OperatorStack.peek() == 18)
         {
             opDer = OperandStack.pop();
             tyDer = TypeStack.pop();
             opIzq = OperandStack.pop();
             tyIzq = TypeStack.pop();
             opOPerator = OperatorStack.pop();
             tyRes = cuboSemantico.getValidacion(opOPerator,tyIzq,tyDer);
             if(tyRes != -1){
                 if(tyRes == 0){
                     opRes = memTemporal.asignacionMemoriaEntera(0);
                     OperandStack.push(opRes);
                  }
                  if(tyRes == 1){
                     opRes = memTemporal.asignacionMemoriaFlotante(0);
                     OperandStack.push(opRes);
                  }
                  cuadActual.CuadruploSetComplete(token.beginLine,opOPerator-17,opIzq,opDer,opRes);
                  cuadruplosArr.add(cuadActual);
                  TypeStack.add(tyRes+34);
             }
         }
     }
  }

  static final public void TERMINO() throws ParseException {
//operador DERECHA, operador IZQUIERDA, tipo DERECHA, tipo IZQUIERDA, tipo RESPUESTA, operador RESPUESTA
int opDer, opIzq, opOPerator, tyDer, tyIzq, tyRes = 8,opRes =0;
Cuadruplo cuadActual = new Cuadruplo();
    FACTOR();
        if(!(OperatorStack.isEmpty()) && !(OperandStack.size() < 2)){
            if (OperatorStack.peek() == 19 || OperatorStack.peek() == 20){
                opDer = OperandStack.pop();
                tyDer = TypeStack.pop();
                opIzq = OperandStack.pop();
                tyIzq = TypeStack.pop();
                opOPerator = OperatorStack.pop();
                tyRes = cuboSemantico.getValidacion(opOPerator,tyIzq,tyDer);
                if(tyRes != -1){
                    if(tyRes == 0){
                        opRes = memTemporal.asignacionMemoriaEntera(0);
                        OperandStack.push(opRes);
                     }
                     if(tyRes == 1){
                        opRes = memTemporal.asignacionMemoriaFlotante(0);
                        OperandStack.push(opRes);
                     }
                     cuadActual.CuadruploSetComplete(token.beginLine,opOPerator-17,opIzq,opDer,opRes);
                     cuadruplosArr.add(cuadActual);
                     TypeStack.add(tyRes+34);
                }
            }
        }
    if (jj_2_7(3)) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTIPLICATION:
        jj_consume_token(MULTIPLICATION);
        OperatorStack.push(token.kind);
        break;
      case DIVISION:
        jj_consume_token(DIVISION);
        OperatorStack.push(token.kind);
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      TERMINO();
    } else {
      ;
    }
  }

  static final public void FACTOR() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LPHARENTESIS:
      jj_consume_token(LPHARENTESIS);
        OperatorStack.push(token.kind);
      MEGAEXPRESION();
      jj_consume_token(RPHARENTESIS);
        OperatorStack.pop();
      break;
    case SUBSTRACTION:
    case cte_i:
    case cte_f:
    case ID:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SUBSTRACTION:
        jj_consume_token(SUBSTRACTION);
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
      VARCTE();
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void VARCTE() throws ParseException {
Objeto var = new Objeto();
int opIzq,opRes = 0, tyRes = 8;
Cuadruplo cuadVer = new Cuadruplo();
Cuadruplo cuadActual = new Cuadruplo();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      jj_consume_token(ID);
            var = search(token.image);
            OperandStack.push(var.getDireccion());
        TypeStack.push(var.getType()+34);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACKET:
        jj_consume_token(LBRACKET);
        OperatorStack.push(token.kind);
        EXP();
        jj_consume_token(RBRACKET);
         OperatorStack.pop();
         opIzq = OperandStack.pop();
         tyRes = var.getType();
         if(tyRes == 0){
             opRes = memTemporal.asignacionMemoriaEntera(0);
          }
          if(tyRes == 1){
             opRes = memTemporal.asignacionMemoriaFlotante(0);
          }
         cuadVer.CuadruploSetComplete(token.beginLine,20,opIzq,0,var.getSize());
         cuadruplosArr.add(cuadVer);
         cuadActual.CuadruploSetComplete(token.beginLine,0,opIzq,var.getDireccion(),opRes);
         cuadruplosArr.add(cuadActual);
         OperandStack.push(opRes);
         TypeStack.add(tyRes+34);
        break;
      default:
        jj_la1[11] = jj_gen;
        ;
      }
      break;
    case cte_i:
      jj_consume_token(cte_i);
        OperandStack.push(memConstante.asignacionMemoriaEntera(Integer.parseInt(token.image)));
        TypeStack.push(token.kind);
      break;
    case cte_f:
      jj_consume_token(cte_f);
        OperandStack.push(memConstante.asignacionMemoriaFlotante(Float.parseFloat(token.image)));
        TypeStack.push(token.kind);
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void CONDICION() throws ParseException {
    Cuadruplo cuadActual = new Cuadruplo();
    jj_consume_token(IF);
    jj_consume_token(LPHARENTESIS);
    MEGAEXPRESION();
    jj_consume_token(RPHARENTESIS);
        cuadActual.CuadruploSetIzqRes(token.beginLine,18,OperandStack.pop(),-1);
        JumpStack.push(cuadruplosArr.size());
        cuadruplosArr.add(cuadActual);
    BLOQUE();
        cuadruplosArr.get(JumpStack.pop()).setiResultado(cuadruplosArr.size()+1);
    CONDICION_AUX();
  }

  static final public void CONDICION_AUX() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE:
        Cuadruplo cuadActual = new Cuadruplo();
        cuadActual.CuadruploSetIzqRes(token.beginLine,17,-1,-1);
        PendingGOTOStack.push(cuadruplosArr.size());
        cuadruplosArr.add(cuadActual);
      jj_consume_token(ELSE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
        CONDICION();
        break;
      default:
        jj_la1[13] = jj_gen;
        BLOQUE();
      }
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
            int pendingPos = PendingGOTOStack.pop();
        Cuadruplo cuadAux = cuadruplosArr.get(pendingPos);
        cuadAux.setiResultado(cuadruplosArr.size());
        cuadruplosArr.set(pendingPos, cuadAux);
  }

  static final public void CICLO() throws ParseException {
Cuadruplo cuadGotof = new Cuadruplo();
Cuadruplo cuadGoto = new Cuadruplo();
    jj_consume_token(WHILE);
            JumpStack.push(cuadruplosArr.size());
    jj_consume_token(LPHARENTESIS);
    MEGAEXPRESION();
    jj_consume_token(RPHARENTESIS);
            cuadGotof.CuadruploSetIzqRes(token.beginLine,18,OperandStack.pop(),-1);
        JumpStack.push(cuadruplosArr.size());
        cuadruplosArr.add(cuadGotof);
    BLOQUE();
        cuadruplosArr.get(JumpStack.pop()).setiResultado(cuadruplosArr.size()+1);
        cuadGoto.CuadruploSetIzqRes(token.beginLine,17,OperandStack.pop(),JumpStack.pop());
        cuadruplosArr.add(cuadGoto);
  }

  static final public void VARS() throws ParseException {
    TIPO();
            //Indica el tipo del siguiente conjunto de variables
            tipo = token.kind-6;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VECTOR:
      VARS_AUX1();
      break;
    case ID:
      VARS_AUX2();
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(SEMICOLON);
  }
